--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic-Tac-Toe</title>
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./public/main.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 
-  <script src="./tic-tac-toe.js"></script>
+  <script src="./public/tic-tac-toe.js"></script>
 </head>
 
 <body>
